--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     }
   </style>
   <script defer type="module">
-      import { auth } from 'fbauth.js';
-      import { rtdb } from 'fbrtdb.js';
+      import * as auth from 'fbauth.js';
+      import * as rtdb from 'fbrtdb.js';
       const join = function() {
           const roomid = document.getElementById('txt-roomid').value.replace(/ /g, '');
           if (!auth.isAuthenticated()) {
