--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     }
     div.root {
       width: 100vw;
-      height: 100vh;
-      background-color: #E5EDF0;
+      height: calc(100vh - 57px);
+      background-color: #F0F0F0;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -31,8 +31,9 @@
       max-width: 340px;
       margin: 0 auto;
       padding: 20px;
+      border: 1px solid #D0D0D0;
       border-radius: 10px;
-      background-color: #DBE3E6;
+      background-color: #E5E5E5;
     }
     p {
       margin: 10px auto;
