--- a/room.html
+++ b/room.html
@@ -82,9 +82,9 @@
       padding: 0 5px;
     }
     #txt-msg {
-      padding: 0.875rem 15px;
+      padding: 0.75rem 12px;
       border-radius: 50px;
-      font-size: 1rem;
+      font-size: 0.9rem;
     }
     #btn-send {
       margin-left: 7px;
@@ -92,17 +92,17 @@
       border: 1px solid #3281F9;
       border-radius: 50px;
       background-color: #3281F9;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
     }
     #btn-send:active {
       background-color: #5194F9;
     }
     #btn-send i {
-      margin: 4px 3px 0 0;
+      margin: 2px 1px 0 0;
     }
     @media screen and (min-width: 400px) and (orientation: landscape) {
       body {
-        background-color: #555555; /* Dark shade of white */
+        background-color: #555555;
         display: flex;
         justify-content: center;
       }
