--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     *:focus {
       outline: none;
     }
+    body {
+      height: calc(100vh - 57px);
+    }
     div.root {
-      width: 100vw;
+      height: 100%;
       height: calc(100vh - 57px);
       background-color: #F0F0F0;
       display: flex;
