--- a/room.html
+++ b/room.html
@@ -115,6 +115,10 @@
       }
     }
   </style>
+  <script defer type="module">
+      import * as auth from './fbauth.js';
+      import * as rtdb from './fbrtdb.js';
+  </script>
 </head>
 <body>
   <div class="root">
